[package]
name = "tuxmux"
version = "0.1.1"
authors = ["edenofest@gmail.com"]
edition = "2021"
description = "Tmux utility for session and window management"
include = ["src/**/**", "Cargo.toml", "Cargo.lock", "readme.md", "config.kdl"]
homepage = "https://github.com/edeneast/tuxmux.git"
repository = "https://github.com/edeneast/tuxmux.git"
license = "Apache-2.0"
readme = "readme.md"
keywords = [
  "cli",
  "tmux",
]

[profile.release] # min rust size resource https://github.com/johnthagen/min-sized-rust
codegen-units = 1 # There are some optimizations that prevented with multi units
lto = true        # Optimize the result in the linking phase
strip = true
opt-level = "z"

[dependencies]
clap = { version = "4.3.23", features = [ "cargo", "derive" ] }
dialoguer = { version = "0.11.0", default-features = false, features = ["fuzzy-select"] }
dirs-next = "2.0.0"
gix = { version = "0.55.2", default-features = false, features = [ "max-performance-safe"] }
indexmap = "2.0.2"
itertools = "0.11.0"
jwalk = "0.8.1"
kdl = "4.6.0"
miette = { version = "5.10.0", features = ["fancy"] }
rayon = "1.7.0"
shellexpand = "3.1.0"
thiserror = "1.0.47"
tmux_interface = "0.3.1"

[[bin]]
name = "tm"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4.3.23", features = [ "cargo", "derive" ] }
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
