[package]
name = "tuxmux"
version = "0.2.2"
authors = ["edenofest@gmail.com"]
edition = "2021"
description = "Tmux utility for session and window management"
include = ["src/**/**", "Cargo.toml", "Cargo.lock", "readme.md", "config.kdl"]
homepage = "https://github.com/edeneast/tuxmux.git"
repository = "https://github.com/edeneast/tuxmux.git"
license = "Apache-2.0"
readme = "readme.md"
keywords = [
  "cli",
  "tmux",
]

[profile.release] # min rust size resource https://github.com/johnthagen/min-sized-rust
codegen-units = 1 # There are some optimizations that prevented with multi units
lto = true        # Optimize the result in the linking phase
strip = true
opt-level = "z"

[dependencies]
clap = { version = "4.5.4", features = [ "cargo", "derive" ] }
clap_complete = "4.5.2"
dialoguer = { version = "0.11.0", default-features = false, features = ["fuzzy-select"] }
dirs-next = "2.0.0"
gix = { version = "0.63.0", default-features = false, features = [ "max-performance-safe"] }
indexmap = "2.2.6"
itertools = "0.11.0"
jwalk = "0.8.1"
kdl = "4.6.0"
miette = { version = "5.10.0", features = ["fancy"] }
rayon = "1.10.0"
shellexpand = "3.1.0"
thiserror = "1.0.60"
tmux_interface = "0.3.2"

# Resolves RUSTSEC-2024-0367 and RUSTSEC-2024-0371
gix-path = "0.10.11"

[[bin]]
name = "tux"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4.5.4", features = [ "cargo", "derive" ] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"
