[package]
name = "tuxmux"
version = "0.3.0"
authors = ["edenofest@gmail.com"]
edition = "2021"
description = "Tmux utility for session and window management"
include = ["src/**/**", "Cargo.toml", "Cargo.lock", "readme.md", "config.kdl"]
homepage = "https://github.com/edeneast/tuxmux.git"
repository = "https://github.com/edeneast/tuxmux.git"
license = "Apache-2.0"
readme = "readme.md"
keywords = [
  "cli",
  "tmux",
]

[profile.release] # min rust size resource https://github.com/johnthagen/min-sized-rust
codegen-units = 1 # There are some optimizations that prevented with multi units
lto = true        # Optimize the result in the linking phase
strip = true
opt-level = "z"

[dependencies]
clap = { version = "4.5.23", features = [ "cargo", "derive" ] }
clap_complete = "4.5.40"
crossterm = "0.28.1"
dirs-next = "2.0.0"
gix = { version = "0.71.0", default-features = false, features = [ "max-performance-safe"] }
indexmap = "2.7.0"
itertools = "0.13.0"
jwalk = "0.8.1"
kdl = "6.1.0"
miette = { version = "7.4.0", features = ["fancy"] }
nucleo = "0.5.0"
ratatui = "0.29.0"
rayon = "1.10.0"
shellexpand = "3.1.0"
thiserror = "2.0.9"
tmux_interface = "0.3.2"

[[bin]]
name = "tux"
path = "src/main.rs"

[build-dependencies]
clap = { version = "4.5.23", features = [ "cargo", "derive" ] }
clap_complete = "4.5.40"
clap_mangen = "0.2.24"
