[package]
name = "tmgr"
version = "0.1.0"
edition = "2021"
description = "Tmux utility for session and window management"
license = "Apache-2.0"

[build-dependencies]
phf_codegen = "0.11.1"

[dependencies]
clap = { version = "3.2.20", features = [ "cargo" ] }
clap_complete = "3.2.4"
dirs-next = "2.0.0"
eyre = "0.6.8"
jwalk = "0.6.0"
phf = "0.11.1"
rayon = "1.5.3"
serde = { version = "1.0.144", features = [ "derive" ] }
# skim = "0.9.4"
skim = { git = "https://github.com/edeneast/skim", branch = "chore/cli-deps-cleanup", default-features = false }
tmux_interface = "0.2.1"
toml = "0.5.9"

[[bin]]
name = "tm"
path = "src/main.rs"
